<resources>
    <string name="app_name">TaskMaster</string>
    <string name="greeting">Task Master</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_some_tasks">Add Some Tasks!</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="submit_task">Submit Task</string>
    <string name="all_my_tasks">All My Tasks</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="user_settings">User Settings</string>
    <string name="please_enter_your_desired_username">Please enter your desired username:</string>
    <string name="settings">Settings</string>
    <string name="go_to_store">Go to Store</string>
    <string name="do_laundry">Do Laundry</string>
    <string name="gym">Gym</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="enter_email">Enter Email:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="verify_your_account">Verify Your Account:</string>
    <string name="submit">Submit</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_username">Enter Username</string>
    <string name="save">Save</string>
    <string name="add_an_image">Add An Image</string>
</resources>