...
    <Button
        android:id="@+id/MainViewButtonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/add_task"
        app:layout_constraintStart_toEndOf="@+id/MainActivitySettingsButtonIntent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MainViewButtonAllTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginStart="1dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MainActivityTVDisplayName"
        android:layout_width="232dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
